# async-pdf-ocr

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/: __init__.py
src/app/: __init__.py  config.py  main.py
src/app/api/: ocr.py  qr.py  split.py
tests/: test_ocr.py  test_qr.py  test_split.py
