[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-pdf-ocr"
version = "0.1.0"
description = "async-pdf-ocr: Async FastAPI HTTP API for OCRmyPDF (Docker/Kubernetes-friendly)"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "OCR API Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.20",
  "ocrmypdf>=16.0.0",
  "pypdfium2>=4.30.0",
  "pyzbar>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py313"]
